--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-"Hello World" 
+<html>
+  <head>
+    <style>
+      body {
+        background-image: url("sakura.jpg");
+        background-size: cover;
+        text-align: center;
+      }
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+      .image-caption {
+        text-align: center;
+        font-style: italic;
+        font-size: smaller;
+        margin-top: 0.5em;
+      }
+      .text-box {
+        width: 50%;
+        margin: 0 auto;
+        padding: 1em;
+        border: 2px solid black;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Japanese Tutoring by Aidan Chu</h1>
+  
+    <p>Are you interested in learning Japanese? Look no further! I am Aidan Chu and I offer tutoring services to help you master the Japanese language.</p>
+  
+    <h2>About Me</h2>
+  
+    <p>I am a native Japanese speaker with years of experience teaching the language to students of all levels. Whether you are a beginner looking to learn the basics or an advanced learner looking to improve your skills, I can help you reach your goals.</p>
+  
+    <h2>Tutoring Services</h2>
+  
+    <p>My tutoring services include one-on-one lessons tailored to your individual needs and goals. I offer flexible scheduling and competitive rates. Contact me today to learn more and book your first lesson!</p>
+  
+    <p>My rate is $10 per hour. Contact me to book your first lesson and get started on your journey to mastering Japanese!</p>
+  
+    <h2>Contact Me</h2>
+  
+    <p>You can reach me by email at <a href="mailto:aidan@japanese-tutoring.com">aidan@japanese-tutoring.com</a> or by phone at 626-818-6366. I look forward to helping you learn Japanese!</p>
+  
+    <img src="anime-girl.jpg" alt="Anime girl">
+    <p class="image-caption">Me to you if you buy my services</p>
+  </body>
+</html>
