--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <p>You can reach me by email at <a href="mailto:aidan@japanese-tutoring.com">aidan@japanese-tutoring.com</a> or by phone at 626-818-6366. I look forward to helping you learn Japanese!</p>
   
     <img src="anime-girl.jpg" alt="Anime girl">
-    <p class="image-caption">Me to you if you buy my services</p>
+    <p class="image-caption">Me to you if you buy my services https://www.instagram.com/walnutscioly/</p>
   </body>
 </html>
